opam-version: "2.0"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl-plplot"
dev-repo: "git+https://github.com/owlbarn/owl-plplot.git"
bug-reports: "https://github.com/owlbarn/owl-plplot/issues"
doc: "https://owlbarn.github.io/owl-plplot/"
synopsis: "Owl-Plplot: thin plotting layer for Owl based on plplot"

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "3.16"}
  "owl" {>= "1.2"}
  "plplot"
]

