(executables
 (names
  box
  function
  lines
  mesh
  scatter
  stem
  subplot
  surf
  )
 (libraries owl owl_plplot)
 (flags ; in order to make the examples compile correctly even with the warnings.
  (:standard
   -warn-error
   -unused-value-declaration
   -warn-error
   -unused-var-strict
   -warn-error
   -unused-var
   -warn-error
   -unused-field)))


; TEMP HACK: 
; If the compiler is not able to link to a library properly, perhaps you can specify the path to the library:
; LD_PRELOAD=/lib/x86_64-linux-gnu/libpthread.so.0 _build/default/examples/function.exe